# market-data-pipeline

./: .gitignore  LICENSE  R&D.ipynb  README.md  __init__.py  pyproject.toml  requirements.txt
config/: __init__.py  config.examples.yaml  config.hybrid.yaml  config.py  secrets.example.yaml
docs/: CCXT_ETL_ARCHITECTURE.md  ETL_DIRECTORY_STRUCTURE.md  ETL_REFACTORING_SUMMARY.md  HYBRID_STORAGE_GUIDE.md  IMPORT_PATTERNS.md  INTEGRATION_CHECKLIST.md  INTEGRATION_COMPLETE.md  LEVEL2_BATCHING.md  PARQUET_OPERATIONS.md  PARSER_VS_PROCESSOR.md  REFACTORING_COINBASE_NAMESPACE.md  S3_READINESS_CHECK.md  UNIFIED_STORAGE_ARCHITECTURE.md  US_CRYPTO_STRATEGY.md
etl/: __init__.py  job.py  parquet_crud.py  repartitioner.py
etl/features/: __init__.py  snapshot.py  state.py  streaming.py
etl/orchestrators/: ccxt_segment_pipeline.py  coinbase_segment_pipeline.py  multi_output_pipeline.py
etl/parsers/: __init__.py  ccxt_parser.py  coinbase_parser.py
etl/processors/: __init__.py  raw_parser.py  raw_processor.py  time_utils.py
etl/processors/ccxt/: __init__.py  advanced_orderbook_processor.py  orderbook_processor.py  ticker_processor.py  trades_processor.py
etl/processors/coinbase/: level2_processor.py  ticker_processor.py  trades_processor.py
etl/readers/: ndjson_reader.py
etl/writers/: __init__.py  parquet_writer.py  parquet_writer_old.py  s3_parquet_writer.py
examples/: etl_pipeline_examples.py  repartition_examples.py  s3_storage_examples.py  storage_examples.py
ingestion/: __init__.py
ingestion/collectors/: base_collector.py  ccxt_collector.py  coinbase_ws.py  databento_ws.py  ibkr_ws.py
ingestion/orchestrators/: __init__.py  ingestion_pipeline.py
ingestion/utils/: __init__.py  serialization.py  time.py
ingestion/writers/: __init__.py  log_writer.py  log_writer_old.py  parquet_writer.py  s3_log_writer.py
scripts/: check_health.py  fix_partition_mismatch.py  migrate_schema.py  query_parquet.py  run_compaction.py  run_etl.py  run_etl_watcher.py  run_ingestion.py  run_sync.py  run_test.py
storage/: __init__.py  base.py  factory.py  sync.py
storage/local/: __init__.py  utils.py
storage/s3/: __init__.py  uploader.py
tests/: __init__.py  conftest.py  test_log_rotation.py  test_log_writer.py  test_parsers.py  test_utils.py
